# modeling-snippets

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
modeling_snippets/src/how-to-arg-parse/: pyproject.toml
modeling_snippets/src/how-to-arg-parse/how_to_arg_parse/src/main/: how_to_arg_parse.py  how_to_arg_parse.sh
modeling_snippets/src/how-to-ddp/: pyproject.toml
modeling_snippets/src/how-to-ddp/how_to_ddp/src/main/: how_to_ddp.py  how_to_ddp.sh
modeling_snippets/src/reverse-engineer-model/: pyproject.toml
modeling_snippets/src/reverse-engineer-model/reverse_engineer_model/src/main/: reverse_engineer_model.py  reverse_engineer_model.sh
modeling_snippets/src/shell-commands/: pyproject.toml
modeling_snippets/src/shell-commands/shell_commands/src/main/: get_directory.sh
src/modeling_snippets/reverse_engineer_model/: reverse_engineer_model.py
src/modeling_snippets/shell_commands/: shell_commands.sh  string_manipulation.sh
