[project]
name = "modeling-snippets"
version = "0.1.0"
description = "A code snippets for modeling"
authors = [
    {name = "cuzai@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
how-to-arg-parse = {path = "modeling_snippets/src/how-to-arg-parse", develop=true}
how-to-ddp = {path = "modeling_snippets/src/how-to-ddp", develop=true}
reverse-engineer-model = {path = "modeling_snippets/src/reverse-engineer-model", develop=true}
shell-commands = {path = "modeling_snippets/src/shell-commands", develop=true}
pre-commit = "^4.5.0"

[tool.black]
line-length = 120
