[project]
name = "how-to-arg-parse"
version = "0.1.0"
description = "Code snippet for how to use argparse"
authors = [
    {name = "cuzai@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
