[project]
name = "how-to-ddp"
version = "0.1.0"
description = "A code snippet for using DDP"
authors = [
    {name = "cuzai@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
