[project]
name = "reverse-engineer-model"
version = "0.1.0"
description = "A code snippet about for reverse engineering an open source model"
authors = [
    {name = "cuzai@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "huggingface-hub (>=0.34.0,<1.0)",
    "transformers (>=4.57.3,<5.0.0)",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
